# swibb

./: Cargo.toml  README.md
src/: amd.rs  brighten.rs  consts.rs  folding.rs  inflate.rs  inline.rs  lib.rs  member_stuffs.rs  module.rs  opt.rs  patterns.rs  scope.rs  stupify.rs  test.rs  wither.rs
src/opt/: wither.rs
