[package]
name = "portal-solutions-swibb"
version = "0.2.6"
edition = "2024"
license = "MPL-2.0"
description = "Utilities for rewriting JS for Weevy, Jsaw, Jsxx, DumbJS, and other JS processing tools"


[features]
test = ["swc_common/tty-emitter","sha3","hex"]
encoding=["sha3","hex"]
sha3 = ["dep:sha3"]
hex = ["dep:hex"]


[dependencies]
hex = { version = "0.4.3", optional = true }
sha3 = { version = "0.10.8", optional = true }
swc_atoms.workspace = true
swc_common.workspace = true
swc_ecma_ast.workspace = true
swc_ecma_parser.workspace = true
swc_ecma_transforms_base.workspace = true
swc_ecma_transforms_optimization.workspace = true
swc_ecma_visit.workspace = true

[workspace]
members=["."]
resolver="3"

[workspace.dependencies]

swc_atoms = "^6.0.0"
swc_common = "^13.0.0"
swc_ecma_ast = "^13.0.0"
swc_ecma_compat_es2015 = "^19.0.0"
swc_ecma_minifier = "^23.0.0"
swc_ecma_transforms_base = "^18.0.0"
swc_ecma_transforms_optimization = "^19.0.0"
swc_ecma_utils = "^18.0.0"
swc_ecma_visit = "^13.0.0"
swc_bundler = "^22.0.0"
swc_ecma_loader = "^13.0.0"
swc_ecma_parser = "^17.0.0"
swc_ecma_codegen = "^15"
swc_ecma_quote = "^17"
